manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc
  annotations:
#   ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
spec:
  rules:
  - http:
      paths:

#     - path: /
#       pathType: Prefix
#       backend:
#         service:
#           name: nginx
#           port:
#             number: 80

      - path: /whoami
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80

      - path: /keycloak
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  # No namespace defined
spec:
# stripPrefixRegex:
#   regex:
#   - ^/[^/]+
  stripPrefix:
    prefixes:
      - "/keycloak"
    forceSlash: false
---
#kind: Ingress
#metadata:
#  annotations:
#    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
